--- a/style.css
+++ b/style.css
@@ -1,29 +1,68 @@
-/* Write Your CSS Below 
-Colors: 
-- rgb(243, 183, 106)
-- yellow
-- rgb(241, 117, 0)
-- red
-- #f3b76a
-- #f17500
-- #0d6e00
-- #6d00fb
-- #dbff39
-- #74c9f1
-- #fb4040
+body {
+    font-family: 'Copperplate', sans-serif;
+    background-image: url('https://i.pinimg.com/236x/d6/3f/56/d63f563519df0ece564b82c72e9e306c.jpg');
+    background-size: cover;
+    color: rgb(241, 117, 0);
+    margin: 0;
+    padding: 0;
+}
 
-Sizes: 
-- 100%
-- 70%
-- auto
-- 1.5em
-- 3rem
-- .5em
+header {
+    background-color: rgb(13, 110, 0);
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
 
-Font: 
-- Copperplate (You can also use any font that you'd like!)
+h1 {
+    font-size: 3rem;
+    color: yellow;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 
-Images: 
-- "https://i.pinimg.com/236x/d6/3f/56/d63f563519df0ece564b82c72e9e306c.jpg"
-    - (You may use any image you would like for the background!)
-*/
+#row1-section1, #row2-section1 {
+    text-align: center;
+    margin: 20px auto;
+}
+
+img {
+    height: 400px;
+    width: 600px;
+    border: 5px solid rgb(116, 201, 241);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+main {
+    background-color: rgba(243, 183, 106, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+p {
+    font-size: 1.5em;
+    color: rgb(109, 0, 251);
+}
+
+a {
+    color: rgb(251, 64, 64);
+    text-decoration: none;
+    border-bottom: 2px solid rgb(251, 64, 64);
+    transition: color 0.3s;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(219, 255, 57);
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(13, 110, 0);
+    color: white;
+    border-top: 5px solid rgb(116, 201, 241);
+    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.3);
+}
